    condition
  * fixed continuous schedule: date+week days
  * fixed log message 'no server password set'
  * fixed TLS connections: reading certificates
  * fixed TLS connection certificates verification: send
    certificate chain, verify certifcates
  * added slave-tls-mode, slave-host-force-tls is now
    deprecated
  * fixed auto-index: add move-to paths for search
  * BARConrol: fixed possible dead-lock in server
    communication
  * BARControl: added option --insecure-tls, improved
    login dialogs
  * BARControl: renamed option --key-file to --keystore-file

2022-08-30 0.22
  * added support for external index database engines
    MariaDB, PostgreSQL
  * added optional move-to in persistence
  * use thread pools for client connections+worker
    threads
  * added option --test-created-archives
  * added option --sparse-files
  * added option --no-stop-on-owner-error
  * added option --server
  * added option --save-configuration: format and
    save configuration file
  * added option --clean-configuration-comments
  * added begin/end time for continuous schedules
  * place pid file into /run by default
  * implemented parallel restore
  * execute pre/post command for BAR in non-server mode,
    too
  * create log file in non-server mode if command line
    option --log-file is specified
  * rename archives: use an increasing number suffix
  * renamed bar-sqlite3 to bar-index and support MariaDB
    and PostgreSQL
  * added option --import to bar-index
  * support ssh password login
  * support webdavs
  * upgrade zlib 1.2.12
  * upgrade bzip2 1.0.8
  * upgrade MMXL 3.3
  * upgrade zStandard 1.5.2
  * upgrade gpp-error 1.45
  * upgrade gcrypt 1.10.1
  * upgrade nettle 3.7.3
  * upgrade gmp 6.2.1
  * upgrade libidn2 2.3.0
  * upgrade GnuTLS 3.6.16
  * upgrade libssh2 1.10.0
  * upgrade libidn2 2.3.2
  * upgrade libicon 1.16
  * upgrade OpenSSL 1.1.1n
  * upgrade c-areas 1.18.1
  * upgrade curl 7.77.0
  * upgrade pcre 8.44
  * upgrade SQLite 3.38